# packaging-publishing

./: .gitignore  mkdocs.yml  pyproject.toml
cancer_prediction/: __init__.py  streamlit_app.py
docs/: index.md
tests/: test_CancerModel.py
