[project]
name = "cancer-prediction-pmh65"
version = "0.1.0"
description = "A basic model to predict cancer"
authors = [
    {name = "ph-u",email = "51484056+ph-u@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
]

[tool.poetry]
packages = [{include = "cancer_prediction"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
mkdocs = "^1.6.1"
mkdocstrings = {extras = ["python"], version = "^0.29.1"}
mypy = "^1.15.0"
pre-commit = "^4.2.0"

[tool.black]
line-length = 100
exclude = '''
/(
    venv
    .mypy_cache
    build
    dist
    .git
    .eggs
)/
'''

[tool.isort]
profile = "black"
line-length = 100
multi_line_output = 3
include_trailing_comma = true
virtual_env = "venv"